Add bootstrap carousel

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@syncfusion/ej2-react-navigations": "^20.3.52",
     "bootstrap": "^5.2.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23",
+    "react-player": "^2.11.0",
     "sass": "^1.56.0"
   },
   "devDependencies": {
