--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-player": "^2.11.0",
+    "react-redux": "^8.0.5",
     "react-transition-group": "^4.4.5",
     "sass": "^1.56.0"
   },
