--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.2",
     "next": "13.0.2",
+    "next-videos": "^1.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
