--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "bootstrap": "^5.2.2",
+    "font-awesome": "^4.7.0",
     "next": "13.0.2",
     "next-videos": "^1.4.1",
     "react": "18.2.0",
